@@ -2538,6 +2538,8 @@ As seen previously, the following options may be set on any filter, but are not 
 .br
 * NCID: ID of netcap configuration to use (string)
 .br
+* LT: set additionnal log tools and levels for the filter usin same syntax as -logs, e.g. :LT=filter@debug (string value)
+.br
 * DBG: debug missing input PID property (=pid), missing input packet property (=pck) or both (=all)
 .br
 
