@@ -2,7 +2,7 @@
  *			GPAC - Multimedia Framework C SDK
  *
  *			Authors: Jean Le Feuvre
- *			Copyright (c) Telecom ParisTech 2017-2023
+ *			Copyright (c) Telecom ParisTech 2017-2024
  *					All rights reserved
  *
  *  This file is part of GPAC / filters sub-project
@@ -878,6 +878,10 @@ struct __gf_filter
 	char *meta_instances;
 	Bool no_segsize_evts;
 
+#ifndef GPAC_DISABLE_LOG
+	GF_LogExtra *logs;
+#endif
+
 #ifdef GPAC_HAS_QJS
 	char *iname;
 	JSValue jsval;
@@ -910,6 +914,8 @@ void gf_filter_pid_retry_caps_negotiate(GF_FilterPid *src_pid, GF_FilterPid *pid
 void gf_filter_reset_pending_packets(GF_Filter *filter);
 
 void gf_filter_instance_detach_pid(GF_FilterPidInst *pidi);
+
+void filter_parse_logs(GF_Filter *filter, const char *_logs);
 
 typedef struct
 {
